Ajout de CommonJS et publication NPM

--- a/index.html
+++ b/index.html
@@ -3,16 +3,16 @@
     <head>
         <meta charset="utf-8">
         <title>JSYG tests</title>
-        <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.css"/>
-        <link rel="stylesheet" href="bower_components/fontawesome/css/font-awesome.css"/>
-        <link rel="stylesheet" href="bower_components/jsyg-menu/JSYG.Menu.css">
+        <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.css"/>
+        <link rel="stylesheet" href="node_modules/font-awesome/css/font-awesome.css"/>
+        <link rel="stylesheet" href="node_modules/jsyg-menu/JSYG.Menu.css">
         <link rel="stylesheet" href="JSYG.MenuBar.css">
             
-        <script src="bower_components/jquery/dist/jquery.js"></script>
-        <script src="bower_components/jQuery.Hotkeys/jquery.hotkeys.js"></script>
-        <script src="bower_components/jsyg-events/JSYG.Events.js"></script>
-        <script src="bower_components/jsyg-stdconstruct/JSYG.StdConstruct.js"></script>
-        <script src="bower_components/jsyg-menu/JSYG.Menu.js"></script>
+        <script src="node_modules/jquery/dist/jquery.js"></script>
+        <script src="node_modules/jQuery.Hotkeys/jquery.hotkeys.js"></script>
+        <script src="node_modules/jsyg-events/JSYG.Events.js"></script>
+        <script src="node_modules/jsyg-stdconstruct/JSYG.StdConstruct.js"></script>
+        <script src="node_modules/jsyg-menu/JSYG.Menu.js"></script>
         <script src="JSYG.MenuBar.js"></script>
     </head>
     <body>
